--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "apollo-server-express": "^3.13.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "express": "^4.17.1",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^8.5.1",
